一周内容整理

--- a/2018/03.md
+++ b/2018/03.md
@@ -648,3 +648,199 @@ class-dump -H Lefex.app -o lefexheader
 
 我们在苹果开发者中心新添加一台测试设备的 `UDID` 之后，紧接着打出一份 `Adhoc` 包，却发现新添加的设备还是无法安装。这是因为 `Xcode` 没有及时更新云端的 `Provisioning Profile`。这时可以清除本地目录 `~/Library/MobileDevice/Provisioning` 下的所有内容，然后打包时勾选 `Automatically manage signing` 选项，`Xcode` 会自动下载云端的最新 `Provisioning Profile`。
 
+
+
+__builtin_expect简介
+----
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+`__builtin_expect` 是 `GCC` 引入的，对if语句的预言，用这个指令告诉编译器最有可能执行的代码，从而编译器进行优化，通俗来讲就是告诉编译器执行 `if` 和 `else` 哪个是大概率事件。话不多说直接说用法：`__builtin_expect(EXP, N)`，很简单，`EXP == N` 是大概率事件。
+
+我先用正常的写法写了一个简单的的Demo
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/11-1.png?raw=true)
+
+代码执行时间是0.017361秒；加上这个指令
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/11-2.png?raw=true)
+
+代码执行时间是0.007645秒，还是挺明显的。小伙伴们也来试试哇！
+
+iOS 9 以后通知不再需要手动移除
+------
+**作者**: [halohily](https://weibo.com/halohily)
+
+通知 NSNotification 在注册者被回收时需要手动移除，是一直以来的使用准则。原因是在 MRC 时代，通知中心持有的是注册者的 unsafe_unretained 指针，在注册者被回收时若不对通知进行手动移除，则指针指向被回收的内存区域，成为野指针。这时再发送通知，便会造成 crash 。而在 iOS 9 以后，通知中心持有的是注册者的 weak 指针，这时即使不对通知进行手动移除，指针也会在注册者被回收后自动置空。我们知道，向空指针发送消息是不会有问题的。
+
+但是有一个例外。如果用
+
+`- (id <NSObject>)addObserverForName:(nullable NSNotificationName)name object:(nullable id)obj queue:(nullable NSOperationQueue \*)queue usingBlock:(void (^)(NSNotification *note))block API_AVAILABLE(macos(10.6), ios(4.0), watchos(2.0), tvos(9.0));`
+
+这个API来注册通知，可以直接传入 block 类型参数。使用这个API会导致注册者被系统 retain ，因此仍然需要像以前一样手动移除通知，同时这个 block 类型参数也需注意避免循环引用。
+
+使用 LLDB expression 命令调试动态更新 UI
+------
+**作者**: [KANGZUBIN](https://weibo.com/kangzubin)
+
+在日常 App 开发过程中，进行真机或者模拟器调试时，我们可能需要微调一下界面上的 UI 元素，比如色值、位置等来看看效果，但如果每次都通过修改代码，然后重新编译运行会比较麻烦，其实我们可以通过 LLDB 调试命令来动态地修改。
+
+LLDB 的 `expression` 命令用于执行一个表达式，并将表达式返回的结果输出。
+
+我们在 App 运行后，点击 Xcode 调试工具栏的“暂停”按钮，进入命令行调试模式，如图：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/10-1.png?raw=true)
+
+然后输入如下命令：
+
+```
+po [[[UIApplication sharedApplication] keyWindow] recursiveDescription]
+```
+
+此时可以看到控制台中输出整个 UI 层级，及每个 UI 元素对象在内存中的地址，如下所示：
+
+```
+po [[[UIApplication sharedApplication] keyWindow] recursiveDescription]
+<UIWindow: 0x7fd94a616c50; frame = (0 0; 375 667); autoresize = W+H; gestureRecognizers = <NSArray: 0x60c00025b120>; layer = <UIWindowLayer: 0x60c00003f7c0>>
+   | <UIView: 0x7fd94a701f90; frame = (0 0; 375 667); autoresize = W+H; layer = <CALayer: 0x60400003b820>>
+   |    | <UIView: 0x7fd94a709640; frame = (30 30; 315 120); autoresize = RM+BM; layer = <CALayer: 0x60400003b860>>
+   |    | <UIView: 0x7fd94a709a30; frame = (30 180; 315 120); autoresize = RM+BM; layer = <CALayer: 0x60400003bac0>>
+```
+
+通过上述输出，我们可以根据内存地址取出某一 UI 元素：
+
+```
+expression -- id $testView = (id)0x7fd94a709640
+```
+
+然后，修改这个 UI 元素的相关属性：
+
+```
+expression -- (void)[$testView setBackgroundColor:[UIColor redColor]]
+```
+
+最后，通过下面命令刷新屏幕，你就可以看到 App 中的对应元素发生变化了：
+
+```
+expression -- (void)[CATransaction flush]
+```
+
+上面只是个例子，其实这个命令不限于说刷新 UI，你甚至可以通过它 Push 打开一个新页面，它相当于可以直接在命令行中执行代码。
+
+另外，我们平时用的 `p` 和 `po` 两个命令，其实也是 `expression` 命令的别名，
+
+`p` 命令等价于 `expression  --` ；
+`po` 命令等价于 `expression -O --` ；
+
+关于 expression 命令的更多使用方式，可通过 `help expression` 获取查看。
+
+参考链接：[iOS/OSX 调试：跳舞吧！与LLDB共舞华尔兹](https://segmentfault.com/a/1190000002413758)
+
+写完这个小集后，无意看到 Mac 的 Dock 栏上的 Reveal 应用图标，心想费这些周折干嘛，我为啥不用 Reveal 这个强大的 UI 调试工具来完成这件事请呢？sad...
+
+
+
+
+# Cycript调试第三方APP
+--------
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+试想一种场景，我想知道某个第三方 APP 当前页面对应的是哪个 VC，想让某个实例执行某个函数后的效果，打印当前的视图层级，咋么办？
+
+其实使用 Cycript 即可解决这几个问题，Cycript是一门脚本语言，可以把某段代码注入到某个进程中。比如我可以把用 Cycript 编写的代码植入到一个运行的 APP 中，这样 APP 就可以执行注入的代码。下面的测试需要安装 MonkeyDev。 
+
+安装 Cycript 非常简单，直接下载 Cycript，并进入 Cycript 目录下，执行：
+
+```./cycript -r 192.168.10.111:6666```
+
+192.168.10.111:6666 是手机ip地址，6666是默认的端口。这时控制台会有：cy#。
+
+
+- 1.当前页面对应的是哪个 VC?
+
+获取当前页面是哪个页面时，可以用到响应链的知识。假如SubjectViewController有一个 UITableView， 它的内存地址是 0x106a05c00 ，那么我可以通过下列命令找到当前的VC。
+
+```
+cy# [#0x106a05c00 nextResponder]
+#"<UIView: 0x105d839d0; frame = (0 0; 375 667); autoresize = W+H; layer = <CALayer: 0x1c0635460>>"
+cy# [#0x105d839d0 nextResponder]
+#"<SubjectViewController: 0x106a0a200>"
+```
+
+- 2.某个实例执行某个函数后的效果？
+
+SubjectViewController 的内存地址是 0x106a0a200，直接执行下面的这条指令，SubjectViewController 的标题会离开变为 Lefe_x。
+
+`cy# [#0x106a0a200 setTitle: @"Lefe_x"]`
+
+- 3.打印当前的视图层级
+
+直接执行下列指令即可。
+
+`[[UIApp keyWindow]recursiveDescription].toString()`
+
+
+[参考](http://www.cycript.org/)
+
+
+# podspec 中预编译宏的使用
+--------
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+相信大家在写一个独立的组件的时候可能都会遇到一个问题，写了一个大而全的库发布到 Cocoapods 上，但是接入者可能只想使用其中几个功能，但是却不得不引入所有代码，有点伤。那有没有对应的解决方案呢？答案是肯定的，就是使用 Cocoapods 中提供的 GCC_PREPROCESSOR_DEFINITIONS。这个是从 SDWebImage 中学到的。
+
+SD 有一个功能是使用 libwebp 来解码展示 WebP 图片。但是一般情况下，引入方是不需要这个功能的。所以作者巧妙的使用了如下方式，来实现 WebP 的引入。即
+
+```ruby
+# 省略了很多不是重点的代码，具体可以参考 SDWebImage
+s.subspec 'WebP' do |webp|
+    webp.xcconfig = { 
+      'GCC_PREPROCESSOR_DEFINITIONS' => '$(inherited) SD_WEBP=1',
+    }
+  end
+```
+
+
+
+
+查看.a静态库中的.o文件及函数接口信息
+--------
+**作者**: [南峰子_老驴](https://weibo.com/touristdiary)
+
+如果想查看.a静态库中的.o文件及函数接口信息，可以尝试下 nm 命令。在 man page 中查看这个命令的信息，截取一段来看，如图1所示：
+
+> Nm displays the name list (symbol table) of each object file in the argument list. If an argument is an archive, a listing for each object file in the archive will be produced. File can be of the form libx.a(x.o), in which case only symbols from that member of the object file are listed. (The parentheses have to be quoted to get by the shell.)  If no file is given, the symbols in a.out are listed.
+
+我们来看看实际效果，以微信的 libWeChatSDK.a 为例，使用如下命令：
+
+nm -m /Users/**/Desktop/libWeChatSDK.a
+
+实际的部分输出如图2所示
+
+```objc
+				  ......
+ 				  (undefined) external _sqlite3_free
+                 (undefined) external _sqlite3_open
+                 (undefined) external _sqlite3_prepare_v2
+                 (undefined) external _sqlite3_reset
+                 (undefined) external _sqlite3_step
+
+/Users/**/Desktop/libWeChatSDK.a(OpenUDID.o):
+---------------- (LTO,CODE) non-external +[WXOMTAOpenUDID _generateFreshOpenUDID]
+---------------- (LTO,CODE) non-external +[WXOMTAOpenUDID _getDictFromPasteboard:]
+---------------- (LTO,CODE) non-external +[WXOMTAOpenUDID _setDict:forPasteboard:]
+---------------- (LTO,CODE) non-external +[WXOMTAOpenUDID setOptOut:]
+---------------- (LTO,CODE) non-external +[WXOMTAOpenUDID valueWithError:]
+---------------- (LTO,CODE) non-external +[WXOMTAOpenUDID value]
+                 (undefined) external _CC_MD5
+                 (undefined) external _CFRelease
+                 (undefined) external _CFStringGetCStringPtr
+                 (undefined) external _CFStringGetFastestEncoding
+                 (undefined) external _CFUUIDCreate
+                 (undefined) external _CFUUIDCreateString
+                 (undefined) external _OBJC_CLASS_$_NSDate
+                 (undefined) external _OBJC_CLASS_$_NSDictionary
+                 ......
+```
+
+大家可以试试效果。
+
