--- a/2018/目录.md
+++ b/2018/目录.md
@@ -46,4 +46,10 @@
 * [14. 打包时 Xcode 无法及时更新 Provisioning Profile 的解决办法 【halohily】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
 * [15. 使用 Apple Configuration 配置自动加入 Wi-Fi 【南峰子】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
 * [16. “偷窥”第三方APP头文件 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
+* [17. podspec 中预编译宏的使用 【Vong】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
+* [18. 使用 LLDB expression 命令调试动态更新 UI 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
+* [19. __builtin_expect简介 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
+* [20. 查看.a静态库中的.o文件及函数接口信息 【南峰子】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
+* [21. Cycript调试第三方APP 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
+* [22. iOS 9 以后通知不再需要手动移除【halohily】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
 
