--- a/2018/目录.md
+++ b/2018/目录.md
@@ -53,3 +53,10 @@
 * [21. Cycript调试第三方APP 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
 * [22. iOS 9 以后通知不再需要手动移除【halohily】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
 
+
+## 04
+
+* [1. 让失去焦点的 UIWebView 弹出键盘的方法【折腾范儿_味精】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/04.md)
+* [2. 使用 Toolchains 在 Xcode 中切换 Swift 版本【南峰子】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/04.md)
+* [3. iOS 11 后还使用旧方法获取设备剩余空间？【Lefe_x】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/04.md)
+
