小集整理测试

--- a/2018/04.md
+++ b/2018/04.md
@@ -58,3 +58,126 @@
 
 [Checking Volume Storage Capacity](https://developer.apple.com/documentation/foundation/nsurlresourcekey/checking_volume_storage_capacity?language=objc)
 
+
+
+webview关闭时手动停止音频播放
+--------
+**作者**: [halohily](https://weibo.com/halohily)
+
+当我们使用 webview 展示网页时，页面内若含有音频标签，点击播放，这时关闭带有 webview 的 VC，会发现即使 webview 已经被释放，音频还是没有停止。这时可以采用比较快捷的方法来做到 webview 被关闭时停止正在播放的音频：webview 重新 load 页面，或者执行停止音频播放的 JavaScript 语句。
+
+这里以 UIWebview 举例，WKWebview 同理。
+
+方法一：重新 load 一个空白页面
+
+> [self.webView loadRequest:[NSURLRequest requestWithURL:[NSURL URLWithString:@"about:blank"]]];
+
+方法二：手动执行停止音频的 JavaScript 语句
+
+> [self.webView stringByEvaluatingJavaScriptFromString:@"audioPause()"];
+
+当然，这两种方法都是比较简便但不优雅的实现方式，适合轻度使用 webview 的场景。如果你们对于 webview 做了比较多的加工，是可以监听 webview 中的音频、视频任务，来手动停止的。
+
+
+
+关于 Xcode console 输出的 UIImage 警告的解决方式
+--------
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+最近项目中遇到 Xcode console 偶尔输出 `[framework] CUICatalog: Invalid asset name supplied: '(null)'` 这样一段 `warning`，毫无头绪。在爆栈上看到有人遇到一样的问题，原因是由于 `[UIImage imageNamed:]` 传了 `nil` 或者传入的 `string` 的 `length` 为0。至于怎么找到具体是哪里传了 `nil`，可以打一个全局断点，然后加一个条件来判断入参是否为空，即可找到有问题的地方。如图所示
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/4-1.jpg?raw=true)
+
+还有遇到 `Could not load the "some-image-name" image referenced from a nib in the bundle with identifier "com.xxxx"` 这种情况，一般情况下是这张图片被删除了，但是 `Xib/Storyboard` 中还引用了这张图片，表现形式主要是 `UIImageView` 的 `image` 属性一栏是 `Unknown`，如下图
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/4-2.png?raw=true)
+
+只要把这个 `Unknown` 改成对应图片即可。
+
+参考链接：
+[Error: CUICatalog: Invalid asset name supplied](http://t.cn/R06T3OW)
+[Could not load the “xxx” image referenced from a nib in the bundle with identifier](http://t.cn/RmXu0sN)
+
+
+
+iOS9之后字符串变换API
+----------
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+今天给大家介绍的是iOS9之后NSString新增的方法：
+`- (nullable NSString *)stringByApplyingTransform:(NSStringTransform)transform reverse:(BOOL)reverse`
+，我用了它的翻译功能之后，喜欢称之为翻译方法，说是翻译可能不太准确，语言变换会更准确一些。
+
+iOS实现了部分ICU（International Components for Unicode的缩写，主要提供提供了 Unicode 和全球化支持）功能，所以才有了这个方法的诞生。因此除了系统提供的转换方式（如下图）之外，还支持ICU语法。
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/5-1.jpg)
+
+ICU转换语法比如说，简体转繁体（Hans-Hant），繁体转简体（Hant-Hans），字母过滤（[:^Letter:] Remove），还有转换成小写（Lower）等等。
+
+我做了一个简单的Demo，核心代码如下：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/5-2.jpg)
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/5-3.jpg)
+
+是不是发现项目里汉语转拼音的三方库也可以干掉了？
+😜比较遗憾的是ICU是不支持英文翻译的，所以这个API
+也是不支持的。只支持简体，繁体，日语，韩语等多语言的APP用这个方法还是比较方便的，在处理字符串上面也是比较不错，去掉emoji也可以一行代码搞定。
+
+ICU相关内容详看：http://userguide.icu-project.org/transforms/general/rules
+
+
+如何优雅地获取 ScrollView 的滚动方向
+--------
+**作者**: [KANGZUBIN](https://weibo.com/kangzubin)
+
+在有些场景，我们可能需要获取 `UIScrollView`（及其子类）的滚动方向来做不同的操作。
+
+我们首先能想到最直观的方法是：用一个变量或属性 lastContentOffset 去保存 scrollView 上次的 `content offset` 值，然后在 `UIScrollView` 的 `scrollViewDidScroll:` delegate 方法中跟 scrollView 当前实时的 `content offset` 做对比来判断滚动方向，代码大致如下：
+
+```objc
+// @property (nonatomic, assign) CGFloat lastContentOffset;
+
+- (void)scrollViewDidScroll:(UIScrollView *)scrollView {
+    if (self.lastContentOffset > scrollView.contentOffset.y) {
+        // 向下滚动
+    } else if (self.lastContentOffset < scrollView.contentOffset.y) {
+        // 向上滚动
+    }
+    self.lastContentOffset = scrollView.contentOffset.y;
+}
+```
+
+今天我们同事在阅读第三方开源代码时，看到一个更简便的方法，同样在 `scrollViewDidScroll:` 方法中，先获取 scrollView 的 `panGestureRecognizer`（拖拽/移动动作）手势，然后把手势滑动的相对偏移在当前 view 上转换成一个 `point`，最后根据 `point` 的 x 或 y 来判断左右/上下滚动方向，代码如下：
+
+```objc
+- (void)scrollViewDidScroll:(UIScrollView *)scrollView {
+    CGPoint point = [scrollView.panGestureRecognizer translationInView:self.view];
+    if (point.y > 0) {
+        // 向下滚动
+    } else {
+        // 向上滚动
+    }
+}
+```
+
+虽然这种方式看似很优雅，可以不用借助额外的变量来完成，但它存在一个问题，如下图所示，我们手指按住屏幕不放，先向上滑动一段距离（从 A -> B，向上）然后改变滑动方向再向下滑动一段距离，（从 B -> A -> C，向下）：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/3-1.png)
+
+但这时候通过第二种方法判断实际得到的结果是：A -> B 向上滚动，B -> A 向上滚动，A -> C 向下滚动，显然，其中 B -> A 的方向判断是错的，应该是向下。
+
+原因在于，上述方法中拖拽手势的相对偏移 `point` 是根据滑动的起始点 A 来进行计算的，所在只要手势停留在起始点 A 之上，不管向上还是向下滑动，它都认为是向上滚动了。
+
+所以这种优雅的方法只适用于 scrollView 一次手势滑动中不改变方向的情况。
+
+参考连接：[Finding the direction of scrolling in a UIScrollView?](https://stackoverflow.com/questions/2543670/finding-the-direction-of-scrolling-in-a-uiscrollview)
+
+
+
+iOS 你的APP中能藏的住秘密吗？
+--------
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+今天知识小集以不一样的方式给大家推送一条“小”集。经过不断的打磨，为知识小集提供的微信截图工具已开源，有需要的小伙伴可以点击原文下载，还没关注知识小集的gongZhonghao，点原文关注哈。本文主要向大家普及一些逆向的知识，以防止别人破解你的APP，拿到重要数据。其实，APP中没有什么安全可言，别人都会轻而易举拿到APP中的数据，修改代码的执行逻辑等。昨天转发了 @没故事的桌同学 的一条微博，有很多同学咨询说使用 Reveal 必须使用越狱机吗？当然不用也可以。文章会有提到，[查看原理](https://juejin.im/post/5accbc05f265da238a30c7fd)
+
