--- a/2018/04.md
+++ b/2018/04.md
@@ -1,7 +1,7 @@
 
 
 ## 让失去焦点的 UIWebView 弹出键盘的方法
-
+--------
 **作者**: [折腾范儿_味精](https://weibo.com/agvicking)
 
 `UIWebView` 无法靠代码的方式让失去焦点的 `webview` 弹出键盘，必须人主动点击 `webview`，代码 `becomefirstresponder` 无效。这个问题是可以通过常规合法手段解决，而不是必须操作私有 `Api`
@@ -16,7 +16,9 @@
 
 5 简单总结一下：关闭 `keyboardDisplayRequiresUserAction` ，客户端注入 `js`，让 `js` 触发 `input` 区域的 `focus` 事件；
 
-## 使用 Toolchains 在 Xcode 中切换 Swift 版本
+使用 Toolchains 在 Xcode 中切换 Swift 版本
+--------
+**作者**: [南峰子_老驴](https://weibo.com/touristdiary)
 
 我们每次安装新版本的 `Xcode` 的时，新 `Xcode` 都只包含最新版本的 `Swift`。但通常我们的代码或第三方库还来不及匹配，或者我们想看看新的特性在新旧版本之间的区别，这时候就比较头大了。
 
@@ -30,8 +32,8 @@
 
 需要注意的是，`Xcode` 自带的默认的 `toolchains` 不能被移除。
 
-## iOS 11 后还使用旧方法获取设备剩余空间？
-
+iOS 11 后还使用旧方法获取设备剩余空间？
+--------
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
 **iOS11**
