--- a/2018/04.md
+++ b/2018/04.md
@@ -106,21 +106,21 @@ iOS9之后字符串变换API
 ----------
 **作者**: [高老师很忙](https://weibo.com/517082456)
 
-今天给大家介绍的是iOS9之后NSString新增的方法：
+今天给大家介绍的是 `iOS9` 之后 `NSString` 新增的方法：
 `- (nullable NSString *)stringByApplyingTransform:(NSStringTransform)transform reverse:(BOOL)reverse`
 ，我用了它的翻译功能之后，喜欢称之为翻译方法，说是翻译可能不太准确，语言变换会更准确一些。
 
-iOS实现了部分ICU（International Components for Unicode的缩写，主要提供提供了 Unicode 和全球化支持）功能，所以才有了这个方法的诞生。因此除了系统提供的转换方式（如下图）之外，还支持ICU语法。
+`iOS` 实现了部分 `ICU`（International Components for Unicode的缩写，主要提供提供了 Unicode 和全球化支持）功能，所以才有了这个方法的诞生。因此除了系统提供的转换方式（如下图）之外，还支持ICU语法。
 
-![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/5-1.jpg)
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/5-1.jpg?raw=true)
 
-ICU转换语法比如说，简体转繁体（Hans-Hant），繁体转简体（Hant-Hans），字母过滤（[:^Letter:] Remove），还有转换成小写（Lower）等等。
+`ICU` 转换语法比如说，简体转繁体（Hans-Hant），繁体转简体（Hant-Hans），字母过滤（[:^Letter:] Remove），还有转换成小写（Lower）等等。
 
 我做了一个简单的Demo，核心代码如下：
 
-![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/5-2.jpg)
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/5-2.jpg?raw=true)
 
-![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/5-3.jpg)
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/5-3.jpg?raw=true)
 
 是不是发现项目里汉语转拼音的三方库也可以干掉了？
 😜比较遗憾的是ICU是不支持英文翻译的，所以这个API
@@ -165,7 +165,7 @@ ICU相关内容详看：http://userguide.icu-project.org/transforms/general/rule
 
 虽然这种方式看似很优雅，可以不用借助额外的变量来完成，但它存在一个问题，如下图所示，我们手指按住屏幕不放，先向上滑动一段距离（从 A -> B，向上）然后改变滑动方向再向下滑动一段距离，（从 B -> A -> C，向下）：
 
-![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/3-1.png)
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/3-1.png?raw=true)
 
 但这时候通过第二种方法判断实际得到的结果是：A -> B 向上滚动，B -> A 向上滚动，A -> C 向下滚动，显然，其中 B -> A 的方向判断是错的，应该是向下。
 
@@ -181,5 +181,144 @@ iOS 你的APP中能藏的住秘密吗？
 --------
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
-今天知识小集以不一样的方式给大家推送一条“小”集。经过不断的打磨，为知识小集提供的微信截图工具已开源，有需要的小伙伴可以点击原文下载，还没关注知识小集的gongZhonghao，点原文关注哈。本文主要向大家普及一些逆向的知识，以防止别人破解你的APP，拿到重要数据。其实，APP中没有什么安全可言，别人都会轻而易举拿到APP中的数据，修改代码的执行逻辑等。昨天转发了 @没故事的桌同学 的一条微博，有很多同学咨询说使用 Reveal 必须使用越狱机吗？当然不用也可以。文章会有提到，[查看原理](https://juejin.im/post/5accbc05f265da238a30c7fd)
+今天知识小集以不一样的方式给大家推送一条“小”集。经过不断的打磨，为知识小集提供的微信截图工具已开源，有需要的小伙伴可以点击原文下载，还没关注知识小集的公众号，点原文关注哈。本文主要向大家普及一些逆向的知识，以防止别人破解你的APP，拿到重要数据。其实，APP中没有什么安全可言，别人都会轻而易举拿到APP中的数据，修改代码的执行逻辑等。昨天转发了 `@没故事的桌同学` 的一条微博，有很多同学咨询说使用 `Reveal` 必须使用越狱机吗？当然不用也可以。文章会有提到，[查看原理](https://juejin.im/post/5accbc05f265da238a30c7fd)
+
+
+
+我们可以利用 NSURLProtocol 做什么
+--------
+**作者**: [halohily](https://weibo.com/halohily)
+
+今天和大家聊一聊 `NSURLProtocol`，可能你已经听说过它。因篇幅有限，这里不讲解具体的使用方式，主要是和大家聊一聊我们可以利用 `NSURLProtocol` 做的一系列事情，权当抛砖引玉，大家可以根据自己的需要去深入了解。
+
+简单来说 `NSURLProtocol` 是苹果 `URL Loading System` 中的一个抽象类。通过实现其子类并注册到 app 中，我们可以拦截 `app` 中的网络请求。那么拦截网络请求可以做什么呢？这里举几个小例子：
+
+- `app` 内置了测试服、正式服的切换开关，需要通过开关一键切换所有网络请求使用的 `server` 地址。
+- 项目内部分模块使用了 `ReactNative`，需要动态配置由前端发出的网络请求 `server` 地址（特殊在于虽然是前端发出，但并非来自 `webview` ）。这个例子和例 1 类似。
+- 项目内含有 `hybrid` 模块。对 `hybrid` 页面加速的一个策略，可以是客户端在合适时机提前缓存资源文件，并且以与 `webview` 加载资源的路径相对应的方式存储在本地。这样当 `webview` 加载资源时，通过拦截判断是否是本地已经存在的资源的请求，如果是，则使用本地资源构造 `response` 。这样可以显著提升被过多资源请求影响的加载速度。
+- 限制 `app` 内 `webview` 的跳转行为，例如禁止向某域名下的跳转，或者对于某个域名下的跳转做重定向操作。当然这些使用 `webview` 的代理方法也可以做到。
+- 对于 `app` 内发出的所有网络请求，需要添加公共的 `header` 内容。
+- 需要统计 `app` 内各处对某个 `api` 的调用次数等数据。
+- 需要统计 `app` 内的网络请求失败率。
+
+参考链接：
+- https://juejin.im/post/584f9d0a128fe10058b8c4b6
+
+CoreData 检索遇到的坑及其解决方式
+--------
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+项目中有用到 `CoreData` 的同学应该对 [`MagicalRecord`](https://github.com/magicalpanda/MagicalRecord/) 这个库或多或少有一点了解，我们项目中也用到这个库的搜索功能即 `NSManagedObject (MagicalFinders)` 这个分类。
+
+最近遇到一个问题就是两个 `CoreData` 的 `Model`，`Father` 和 `Son`，`Son` 继承自 `Father`。在 `Father` 执行 `MR_findxxx` 等一系列方法时，会把 `Son` 的实例也找出来。一番搜索下来发现有人在 [`MagicalRecord`](https://github.com/magicalpanda/MagicalRecord/) 提了个类似的 [issue](http://t.cn/RmQD2Rj)。然后发现 `NSFetchRequest` 有一个 `includesSubentities` 属性，直接将其设置成 `NO`，即可。代码如下
+
+```objc
++ (NSArray *)findAllOrderBy:(NSString *)orderItem ascending:(BOOL)ascending inContext:(NSManagedObjectContext *)context {
+    NSFetchRequest *request = [self requestAllInContext:context];
+    [request setIncludesSubentities:NO];
+    [request setFetchBatchSize:[self defaultBatchSize]];
+    NSSortDescriptor *sortBy = [[NSSortDescriptor alloc] initWithKey:orderItem ascending:ascending];
+    [request setSortDescriptors:[NSArray arrayWithObject:sortBy]];
+    
+    return [self executeFetchRequest:request inContext:context];
+}
+```
+
+参考链接：
+
+[mr_fetchAllSorted fetches not only the parent entity but also the child entity](http://t.cn/RmQD2Rj)
+
+[NSPredicate that filters out subclass results](http://t.cn/RmQDqYa)
+
+
+为icon换装
+----------
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+最近一直在研究怎么减少资源文件，如果产品童鞋要用不同颜色的图片展示不同的状态，状态 A 是绿色的，状态 B 是红色的，状态 C 是黄色，图案都是一样的，只是颜色不同，也许你会让设计童鞋切3张图，但这种方式不太优雅。
+
+有两种方案：一个是使用 `tintColor`，可以简单的实现更换颜色；如果这个方法不能满足需求，可以使用绘制的方式，可选参数会多很多。喵神之前发表过一篇文章——**《iOS中使用blend改变图片颜色》**很是受用，虽然发表时间有点早，但我个人觉得还是比较实用。
+
+我们可以使用 `UIImage` 的 `-drawInRect:blendMode:alpha:` 方法，封装后一行代码搞定你想要的任何颜色，直接上代码：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/8-1.jpg?raw=true)
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/8-2.jpg?raw=true)
+
+运行效果如图：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/8-3.jpg?raw=true)
+
+`kCGBlendModeDestinationIn` 是保留透明度信息；但如果图片中有阴影就需要与 `kCGBlendModeOverlay` 或者 `kCGBlendModeMultiply` 或其它参数根据实际情况叠加使用。
+
+喵神已经把原理讲解的很详细了，感兴趣的童鞋可以移步：https://onevcat.com/2013/04/using-blending-in-ios/
+
+
+使用 LLDB bugreport 命令导出 App 运行崩溃日志
+--------
+**作者**: [KANGZUBIN](https://weibo.com/kangzubin)
+
+在日常开发调试 `App` 过程中，当我们写的代码有 `Bug` 导致崩溃时，此时我们通常会断点到崩溃的位置，然后查看 `Xcode` 控制台输出崩溃原因进行解决。
+
+但有些时候我们手头可能有其它的活不能立即进行排查，或者崩溃的是其他同事的代码，需要先把控制台的崩溃日志复制粘贴到其他地方保存起来，过后再看或者告知同事进行解决。强大的 `LLDB` 调试工具提供了一个 `bugreport` 命令帮我们快速完成导出日志这件事。
+
+例如，有一段数组越界崩溃的代码如下：
+
+```objc
+- (void)testBugReport {
+    NSArray *testArray = @[@"1", @"2", @"3"];
+    NSLog(@"%@", testArray[4]);
+}
+```
+
+此时在控制台执行如下命令：
+
+```ruby
+bugreport unwind --outfile /Users/kangzubin/Desktop/buglog.txt
+```
+
+它可以生成一份当前 App 运行状态的完整报告，包含崩溃的调用栈信息，大致如下：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/7-1.png?raw=true)
+
+另外，我们可以在上述命令后面加一个 `--append-outfile` 修饰符，用于在已有的日志文件中追加新的崩溃日志信息，而不是覆盖。
+
+```
+bugreport unwind --outfile <path to output file> --append-outfile
+```
+
+参考：[Debugging Swift code with LLDB](https://medium.com/flawless-app-stories/debugging-swift-code-with-lldb-b30c5cf2fd49)
+
+Xcode 9 中快速定位目标控制器
+---------
+**作者**: [moon2light](https://weibo.com/u/2565466125)
+
+你有没有这种困扰，接手一个老项目或项目目录结构复杂的时候，我们要修改某个控制器的界面/功能时，控制器的定位就有些许困难。苹果爸爸很早就意识到这个问题了，也一直在优化这里，今天就分享一下该 `UI` 调试小技巧。
+
+充分条件:
+
+1. `Xcode 9.0` 及以上
+2. 模拟器/真机 `iOS 11.0` 及以上
+
+过程:
+
+1.模拟器/真机定位需要调试的界面.
+2.定位到 `debug` 工具 -> 点击 `debug view hierarchies`。
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/9-1.png?raw=true)
+
+3.轻转一下视图层次,就可以看到整个的页面的层次结构,今天的重点在这里,控制器实例。
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/9-2.png?raw=true)
+
+4.点击控制器实例(上图红框部分),看 `Xcode` 右侧 `show the object inspector`。
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/9-3.png?raw=true)
+
+5.当当当~是不是感觉到类名很熟悉,点击右侧小箭头,就会跳转到对应控制器的 .h 文件。
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/9-4.png?raw=true)
+
+6.`command+shift+j` 文件导航栏中定位文件,找到 `.m` 文件,  `enjoy debugging`。
+
 
