--- a/2018/目录.md
+++ b/2018/目录.md
@@ -69,4 +69,5 @@
 * [11. 使用 LLDB bugreport 命令导出 App 运行崩溃日志 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/04.md#%E4%BD%BF%E7%94%A8-lldb-bugreport-%E5%91%BD%E4%BB%A4%E5%AF%BC%E5%87%BA-app-%E8%BF%90%E8%A1%8C%E5%B4%A9%E6%BA%83%E6%97%A5%E5%BF%97)
 * [12. 为icon换装 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/04.md#%E4%B8%BAicon%E6%8D%A2%E8%A3%85)
 * [13. Xcode 9 中快速定位目标控制器【moon2light】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/04.md)
+* [14. 讨论一个常见的需求实现【Lefe_x】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/04.md)
 
