4、5月内容整理

--- a/2018/04.md
+++ b/2018/04.md
@@ -405,3 +405,144 @@ Xcode 9 中快速定位目标控制器
 **primise 的使用** `https://github.com/lefex/LefexWork/blob/master/blog/iOS/Promise.md`
 
 
+说说 NSTimer 的新 API
+--------
+**作者**: [halohily](https://weibo.com/halohily)
+
+在以往的 iOS 版本中，我们为了避免 NSTimer 的循环引用问题，一个比较常用的解决办法是为 NSTimer 添加一个 category，新增传入 block 类型参数的接口。分类内部实现是将此 block 作为 NSTimer 的 userInfo 参数传入，而 NSTimer的 target 则设置为 timer 自己。以此来避免 NSTimer 持有 VC。代码如下:
+
+```objc
+// NSTimer+BlocksSupport.h
+#import <Foundation/Foundation.h>
+
+@interface NSTimer (BlocksSupport)
++ (NSTimer *)ly_scheduledTimerWithTimeInterval:(NSTimeInterval)interval
+repeats:(BOOL)repeats
+block:(void(^)())block;
+@end
+
+// NSTimer+BlocksSupport.m
+#import "NSTimer+BlocksSupport.h"
+
+@implementation NSTimer (BlocksSupport)
++ (NSTimer *)ly_scheduledTimerWithTimeInterval:(NSTimeInterval)interval
+repeats:(BOOL)repeats
+block:(void(^)())block;
+{
+	return [self scheduledTimerWithTimeInterval:interval
+						target:self
+					  selector:@selector(ly_blockInvoke:)
+					  userInfo:[block copy]
+					   repeats:repeats];
+}
+
++ (void)ly_blockInvoke:(NSTimer *)timer {
+	void (^block)() = timer.userInfo;
+	if(block) {
+		block();
+	}
+}
+@end
+```
+
+而在 iOS 10 之后，苹果终于为 NSTimer 添加了一个官方 API，支持传入 block 类型参数。可谓是千呼万唤始出来。新官方 API 包括：
+
+```objc
++ (NSTimer *)timerWithTimeInterval:(NSTimeInterval)interval
+repeats:(BOOL)repeats
+block:(void (^)(NSTimer *timer))block API_AVAILABLE(macosx(10.12), ios(10.0), watchos(3.0), tvos(10.0));
++ (NSTimer *)scheduledTimerWithTimeInterval:(NSTimeInterval)interval
+repeats:(BOOL)repeats
+block:(void (^)(NSTimer *timer))block API_AVAILABLE(macosx(10.12), ios(10.0), watchos(3.0), tvos(10.0));
+```
+
+模块化带来的痛之模块之间的数据同步
+--------
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+如今，模块化已经屡见不鲜，目前很多公司都在做。然而在使用模块化的过程中，各个模块之间是如何通信的？我们一起先看下具体的需求：
+
+PM：这一版本做一个下载功能，包含我的下载，待下载，正在下载等，下载入口会在A，B，C模块中都会显示，而且需要把下载状态和进度实时显示到 UI 上。
+
+我：从需求出发，需要设计一个下载模块。但是，**A，B，C 模块都需要实时了解当前的下载状态和进度以展示到 UI**，那么问题来了如何做到下载模块与 A，B，C 模块之间进行下载状态和进度同步呢？
+
+模块之间数据同步可以有以下几种方式：
+
+- 1.通知
+通知是最简单的方式，每当下载状态和进度变化的时候，需要发通知出去，这样其它模块即可接收到当前的变化。他的缺点是通知太分散，不太好控制。
+
+- 2.注册监听
+下载队列是一个单例，可以直接通过路由的方式注册监听，当下载状态和进度变化的时候给注册者发送消息。
+
+如果你有什么好的方式，欢迎讨论，这条小集只是起到了抛砖引玉的作用，希望大家可以把更好的方案分享出来。
+
+CoreData 关系的4种删除规则
+--------
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+由于项目是基于 `CoreData` 的，所以 `CoreData` 方面遇到的问题比较多。今天主要为大家分享一下 CoreData 中关系的4种删除规则。
+
+先假设我们有两个实体，`Blog` 和 `Category`，一篇 `Blog` 只能属于一个 `Category`，一个 `Category` 可以有多篇 `Blog`。
+如图:
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/05/1-1.jpg?raw=true)
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/05/1-2.jpg?raw=true)
+
+1.No Action
+
+规则为 `No Action` 时，当 `category` 删除时， `blogs` 是不会被通知到的，由于 `CoreData` 里关系是双向的，`blog` 这边依然认为他被关联到对应的 `category`。这种规则到目前还没用到过，也没有具体的使用场景，如果设置成 `No Action`，如果操作不当，可能会有崩溃发生
+
+2.Nullify
+
+还是拿上面举例，如果 `category` 被删除，`blog` 对应的 `category`  关系会被置为 `nil`。这个是系统默认删除规则，也是日常中用的最多的删除规则。
+
+3.Cascade
+
+`Cascade` 规则某些场景下也十分有用。还是用上面例子，一般情况下，我们想 `category` 被删除之后，其拥有的所有 `blog` 实例也要删除，那这个时候直接将删除规则设置成这个即可。`CoreData` 在 `category` 删除后会自动将其关联的 `blog` 也全部删除。但这种情况一般只存在与一对多(或一对一)的情况，如果是多对多，就不适合用这种规则。
+
+4.Deny
+
+这个规则刚好和 `Cascade` 相反，`category` 只有在其所拥有的 `blogs` 都被删除的情况下才会被删除。这种情况在我们项目中，也没有具体使用场景。
+
+综上，一般业务场景下 `Nullify` 和 `Cascade` 规则已经可以满足。如果有其他特殊场景也可以考虑1和4。欢迎补充和讨论~
+
+Objective-C 可变容器对象的初始化方法使用总结
+--------
+**作者**: [KANGZUBIN](https://weibo.com/kangzubin)
+
+最近在 Review Code 时，发现团队中不同成员对一个 `可变字典空对象` 的初始化方式写法都不太一致，主要有以下几种：
+
+```objc
+// 第 1 种
+NSMutableDictionary *dict1 = [[NSMutableDictionary alloc] init];
+
+// 第 2 种
+NSMutableDictionary *dict2 = [NSMutableDictionary new];
+
+// 第 3 种
+NSMutableDictionary *dict3 = [NSMutableDictionary dictionary];
+
+// 第 4 种
+NSMutableDictionary *dict4 = [NSMutableDictionary dictionaryWithCapacity:10];
+
+// 第 5 种
+NSMutableDictionary *dict5 = @{}.mutableCopy;
+```
+
+我们知道在 Objective-C 中主要有三大容器，分别是数组、字典、集合，它们各自都对应有可变对象和不可变对象，如：`NSArray`/`NSMutableArray`, `NSDictionary`/`NSMutableDictionary`, `NSSet`/`NSMutableSet`, 我们这里不再赘述它们的区别和使用方式，下面主要以 `NSMutableDictionary` 为例介绍以上几种初始化写法的不同。
+
+第 1 种就是我们常见初始化一个 `NSObject` 对象的写法，其中 `alloc` 为 `NSObject` 的类方法，它用于创建（分配内存）并返回指定类一个的新对象，而 `init` 为 `NSObject` 的实例方法，一般由子类重新实现，用于初始化一个刚创建 (allocated) 的对象。
+
+第 2 种写法，对于 `NSObject` 的 `new` 方法，[苹果文档](https://developer.apple.com/documentation/objectivec/nsobject/1571948-new) 是这么说的：Allocates a new instance of the receiving class, sends it an init message, and returns the initialized object. 因此，它就是 `alloc` 和 `init` 方法的组合，与第 1 种写法是等价的。
+
+第 3 种，[文档描述](https://developer.apple.com/documentation/foundation/nsdictionary/1574180-dictionary?language=objc)：Creates and returns an empty dictionary. 它也是一种快速的初始化写法。在 **ARC** 下，它与 `[[NSMutableDictionary alloc] init]` 是相同的；但在 **MRC** 手动管理内存时，使用 `[[NSMutableDictionary alloc] init]` 创建并初始化对象，后续我们需要手动调用 `release` 方法释放，而 `[NSMutableDictionary dictionary]` 相当于 `[[[NSMutableDictionary alloc] init] autorelease]`，区别在于你不用再调用 release 方法去释放它了。
+
+第 4 种，相当于调用 `[[NSMutableDictionary alloc] initWithCapacity:10]` 方法，它用于创建一个可变字典对象并初始化分配给它足够的内存空间以存储指定长度（10）个内容对象，且当动态添加的数据超过初始化时指定的长度，也会自动增加分配新的内存，所以如果你可以确定要用的可变字典大致的存储个数，推荐使用这种方式。
+
+对于第 5 种，我们知道 `@{}` 字面值相当于创建了一个不可变的 `NSDictionary` 空对象，然后调 NSObject 的 `mutableCopy` 拷贝成一个新的可变对象赋给 `dict5`。
+
+此外，对于 `NSMutableArray` 和 `NSMutableSet` 也有与上述类似的几种不同的初始化写法，不再一一分析。
+
+以上是对可变字典空对象的几种不同初始化写法的简单对比，你习惯用哪一种呢？欢迎留言讨论...
+
+[参考链接1](https://stackoverflow.com/questions/4152322/to-create-an-empty-dictionary-nsmutabledictionary-dictionary-or-nsmutabledi)、[参考链接2](https://stackoverflow.com/questions/11256228/what-is-the-difference-between-class-new-and-class-alloc-init-in-ios/11256290)
+
