4月第四期内容

--- a/2018/04.md
+++ b/2018/04.md
@@ -546,3 +546,22 @@ NSMutableDictionary *dict5 = @{}.mutableCopy;
 
 [参考链接1](https://stackoverflow.com/questions/4152322/to-create-an-empty-dictionary-nsmutabledictionary-dictionary-or-nsmutabledi)、[参考链接2](https://stackoverflow.com/questions/11256228/what-is-the-difference-between-class-new-and-class-alloc-init-in-ios/11256290)
 
+水平可者竖直布局方案
+--------
+
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/10-1.jpg?raw=true)
+
+如果想实现上图这种水平布局，大家会采取哪些技术方案呢？一些常规操作我就不介绍了，我主要是介绍2种比较方便的解决方案，可以适用于固定个数的子视图和不确定个数的子试图（eg:根据接口返回显示子视图的个数）。
+
+首先推荐iOS9之后推出的**UIStackView**，使用比较方便，嵌套使用也比较方便，如果是在xib或者Storyboard直接拖几个控件，设置一下属性就可以实现上面的效果，如果手动Coding的话也很简单，如图：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/10-2.jpg?raw=true)
+
+另一个方案是**Masonry**库封装的方法，这种布局也可以轻松实现，如图：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/04/10-3.jpg?raw=true)
+
+如果有其他更简单的方案，欢迎一起分享！
+
