--- a/2018/04.md
+++ b/2018/04.md
@@ -546,7 +546,7 @@ NSMutableDictionary *dict5 = @{}.mutableCopy;
 
 [参考链接1](https://stackoverflow.com/questions/4152322/to-create-an-empty-dictionary-nsmutabledictionary-dictionary-or-nsmutabledi)、[参考链接2](https://stackoverflow.com/questions/11256228/what-is-the-difference-between-class-new-and-class-alloc-init-in-ios/11256290)
 
-水平可者竖直布局方案
+水平或者竖直布局方案
 --------
 
 **作者**: [高老师很忙](https://weibo.com/517082456)
